[package]
name = "tickertinker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tickertinker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
pcap = "2.3.0"
etherparse = "0.19.0"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
plotters = { version = "0.3.7", default-features = false, features = ["area_series", "line_series"] }
iced = { version = "0.13.1", features = ["tokio", "svg", "advanced", "lazy", "image"] }
plotters-iced = "0.11.0"
maxminddb = "0.26.0"
confy = "1.0.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] } # Already exists, update version and features
serde_json = "1"
rodio = { version = "0.21.1", default-features = false, features = ["mp3", "playback"] }
dns-lookup = "2.1.0"
toml = "0.9.5"
ctrlc = { version = "3.4.7", features = ["termination"] }
rfd = "0.15.4"
phf = "0.12.1"
phf_shared = "0.12.1"
splines = "5.0.0"
clap = { version = "4.5.44", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros"] }
async-channel = "2.5.0"

[target.'cfg(windows)'.dependencies]
gag = "1.0.0"
